--- a/hangman/index.html
+++ b/hangman/index.html
@@ -3,6 +3,10 @@
 <html>
     <head></head>
     <body>
+        <h1 id="puzzleString"></h1>
+        <h2 id="remainingGuesses"></h2>
+        <h3>Type a letter on the keyboard</h3>
         <script src="hangman.js"></script>
+        <script src="app.js"></script>
     </body>
 </html>
