feat(advanced objects and functions): Hangman part IV end

--- a/hangman/index.html
+++ b/hangman/index.html
@@ -4,7 +4,7 @@
     <head></head>
     <body>
         <h1 id="puzzleString"></h1>
-        <h2 id="remainingGuesses"></h2>
+        <h2 id="output"></h2>
         <h3>Type a letter on the keyboard</h3>
         <script src="hangman.js"></script>
         <script src="app.js"></script>
